fix: spacing and xit

--- a/packages/cloud-cognitive/src/components/AddSelect/_add-select.scss
+++ b/packages/cloud-cognitive/src/components/AddSelect/_add-select.scss
@@ -448,7 +448,7 @@
 
   .#{$block-class}__multi .#{$pkg-prefix}--empty-state {
     max-width: 16rem;
-    margin-top: $spacing-04;
+    margin-top: $spacing-09;
   }
 
   .#{$block-class} .#{$carbon-prefix}--accordion__arrow {
